# rake-spacy

./: .bumpversion.cfg  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  test.yaml  type-check.yaml
rake_spacy/: __init__.py  aggregators.py  base.py  cli.py  cog.py  commands.py  mappers.py  phrasers.py  rake.py  rake2.py  scorers.py  stop_tokens.py
tests/: conftest.py  test_rake.py  test_rake_spacy.py
tests/data/: abstract.txt  canada.txt  casterbridge.txt  comets.txt  glider.txt  gretzky.txt  hurricanes.txt  puppies.txt  running.txt
