[tool.poetry]
name = "rake-spacy"
version = "0.2.0"
description = "Extract keywords/keyphrases from text using the RAKE algorithm."
authors = ["Andrew Ross <andrew.ross.mail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
spacy = "^2.2.4"
spacy-lookups-data = "^0.2.0"
loguru = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^19.10b0"
flake8 = "^3.7.9"
pylint = "^2.4.4"
bump2version = "^1.0.0"
docutils = "^0.16"
rstcheck = "^3.3.1"
reorder-python-imports = "^2.3.5"
pytest-mock = "^3.3.1"

[tool.poetry.scripts]
rake-spacy = "rake_spacy.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
