[tool.poetry]
name = "rake-spacy"
version = "0.3.1"
description = "Extract keywords/keyphrases from text using the RAKE algorithm."
authors = [
    "Andrew Ross <andrew.ross.mail@gmail.com>"
]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/andrewrosss/rake-spacy"
repository = "https://github.com/andrewrosss/rake-spacy"
documentation = "https://github.com/andrewrosss/rake-spacy"

keywords = ["ml", "nlp", "rake"]

classifiers = [
    "Programming Language :: Python :: 3.0",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
]

[tool.poetry.dependencies]
python = "^3.7"
spacy = ">= 2.2, < 4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = "^20.8b1"
flake8 = "^3.7.9"
pylint = "^2.4.4"
bump2version = "^1.0.0"
docutils = "^0.16"
rstcheck = "^3.3.1"
reorder-python-imports = "^2.3.5"
pytest-mock = "^3.3.1"
pytest-cov = "^2.10.1"
mypy = "^0.782"

# [tool.poetry.scripts]
# rake-spacy = "rake_spacy.cli:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
